--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h1{
 
     /* prima sezione */
 
-.main-container-1rst-row, .main-container-2nd-row, .main-container-3rd-row{
+.main-container-1rst-row, .main-container-2nd-row, .main-container-3rd-row, .faq-row{
     width: 60%;
     margin: auto;
 }
@@ -232,3 +232,24 @@ h1{
 
     /* inizio sezione faq */
     
+footer {
+    background-color: black;
+    color: white;
+}
+
+footer > nav{
+    width: 70%;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+
+ footer nav ul li{
+    display: inline-block;
+ }
+
+  footer nav ul{
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+  }
