--- a/css/style.css
+++ b/css/style.css
@@ -1,279 +1,359 @@
 /* RESET */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.button{
-    padding: 5px 10px;
-    background-color:#0061FF ;
-    color: white;
-    display: inline-block;
+.button {
+  padding: 5px 10px;
+  background-color: #0061ff;
+  color: white;
+  display: inline-block;
+  text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
 
 /* debug */
 
-
-
-.card{
-    background-color: darkgreen;
-    border: 2px dashed black;
-
+.main-container-3rd-row div {
+  border: 2px dashed black;
+  background-color: firebrick;
 }
-
-.or-bottom{
-    background-color: aqua;
-    border: 2px dashed black;
-
-}
-
-.or-top{
-    background-color: aqua;
-    border: 2px dashed black;
-}
-
-.left{
-    border: 2px dashed black;
-
-}
-
-.right{
-    border: 2px dashed black;
-
-}
-
-.main-container-2nd-row > div{
-    border: 2px dashed black;
-    background-color: firebrick;
-}
-
-.main-container-3rd-row  div{
-    border: 2px dashed black;
-    background-color: firebrick;
-}
-
 
 /* header */
-    /* header-top */
+/* header-top */
 
-.header-top{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    min-height: 50px;
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  min-height: 50px;
 }
 
-.header-top .l-col ul li{
-    text-decoration: none;
-    display: inline-block;
-    padding: 20px 10px;
-    color: black;
+.header-top .l-col ul li {
+  text-decoration: none;
+  display: inline-block;
+  padding: 20px 10px;
+  color: black;
 }
 
-.l-col ul :first-child{
-    vertical-align: middle;
+.l-col ul :first-child {
+  vertical-align: middle;
 }
 
-
-.header-top .l-col ul li a{
-    text-decoration: none;
+.header-top .l-col ul li a {
+  text-decoration: none;
 }
 
-.header-top .r-col ul li{
-    text-decoration: none;
-    display: inline-block;
-    padding: 20px 10px;
+.header-top .r-col ul li {
+  text-decoration: none;
+  display: inline-block;
+  padding: 20px 10px;
 }
-.header-top .r-col ul li a{
-    text-decoration: none;
-}
-
-    /* header-bottom */
-
-.header-bottom{
-    width: 60%;
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
+.header-top .r-col ul li a {
+  text-decoration: none;
 }
 
-h1{
-    font-size: 4.5em;
+/* header-bottom */
+
+.header-bottom {
+  width: 70%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.header-bottom > h1{
-    margin: 100px 0px;
+h1 {
+  font-size: 4.5em;
 }
 
-.b-section{
-    width: 100%;
-    background-color:#B4D0E7;
+.header-bottom > h1 {
+  margin: 100px 0px;
 }
 
-.b-h-text > .button > a{
-    color: white;
-    text-decoration: none;
+.b-section {
+  width: 100%;
+  background-color: #b4d0e7;
 }
 
-.b-h-text > *{
-    margin-bottom: 40px;
+.b-h-text > .button > a {
+  color: white;
+  text-decoration: none;
 }
 
-.b-h-text{
-    width: 30%;
-    min-height: 400px;
+.b-h-text > * {
+  margin-bottom: 40px;
 }
 
-.b-h-img{
-    width: 70%;
-    min-height: 400px;
-    margin-bottom: -50px;
+.b-h-text {
+  width: 30%;
+  min-height: 400px;
+}
+
+.b-h-img {
+  width: 70%;
+  min-height: 400px;
+  margin-bottom: -100px;
 }
 
 .b-h-img > img {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
+.b-h-text > div > i {
+  font-size: 3em;
+  font-weight: bold;
+  padding-top: 50px;
+}
 
 /* fine header */
 
 /* inizio main */
 
-    /* prima sezione */
+ /* prima sezione */
 
-.main-container-1rst-row, .main-container-2nd-row, .main-container-3rd-row, .faq-row{
-    width: 60%;
-    margin: auto;
+.main-container-1rst-row,
+.main-container-2nd-row,
+.main-container-3rd-row,
+.faq-row {
+  width: 60%;
+  margin: auto;
 }
 
-.card-box{
-    width: 100%;
-    display: flex;
-    margin-top: 100px;
+.main-container-1rst-row > div > h2 {
+  margin-top: 100px;
 }
 
-.card{
-    min-height: 400px;
-    width:calc((100% / 3) - 5px);
+.radio-box {
+  margin-top: 50px;
 }
 
-.margin{
-    margin: 0px 15px;
+.card .card-header {
+  text-align: center;
+  padding: 5px 0px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.5);
 }
 
-.orizzontal-card{
-    width: 100%;
-    margin-top: 50px;
+.card-box {
+  width: 100%;
+  display: flex;
+  margin-top: 50px;
 }
 
-.or-top{
-    text-align: center;
-    width: 100%;
+.card {
+  min-height: 400px;
+  width: calc((100% / 3) - 10px);
+  border: 1px solid rgba(128, 128, 128, 0.5);
+}
+
+ /* CARD */
+
+.card > ul li:first-child {
+  padding: 30px 0px;
+}
+
+.card > ul li:nth-child(3) {
+  padding: 10px 0px 20px;
+  color: gray;
+}
+
+.card > ul li:nth-child(4) {
+  padding: 10px 0px;
+}
+
+.card > ul li:nth-child(5) {
+  padding: 10px 0px;
+}
+
+.card > ul li:nth-child(6) {
+  padding: 5px 0px 30px;
+}
+
+.card > ul li:nth-child(7) {
+  padding-top: 20px;
+}
+
+.card > ul li:nth-child(8) {
+  padding: 20px 0px;
+}
+.card > ul {
+  padding: 0px 30px;
+}
+
+.card > hr {
+  width: 50px;
+  color: gray;
+  margin: 20px 30px;
+}
+
+.fa-ul span > i {
+  color: #0061ff;
+}
+
+.list-2nd > ul {
+  padding: 20px 0px;
+}
+
+.list-2nd > ul > li {
+  padding: 10px 0px;
+}
+
+.margin {
+  margin: 0px 30px;
+}
+
+ /* FINE CARD */
+
+.orizzontal-card {
+  width: 100%;
+  margin-top: 50px;
+  border: 1px solid rgba(128, 128, 128, 0.5);
+}
+
+.or-top {
+  text-align: center;
+  width: 100%;
+  border: 1px solid rgba(128, 128, 128, 0.5);
+  padding: 10px 0px;
 }
 
 .or-bottom {
-    width: 100%;
-    height: 200px;
-    display: flex;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  border: 1px solid rgba(128, 128, 128, 0.5);
 }
 
-.left{
-    width: 70%;
-    height: 100%;
+.left {
+  width: 70%;
+  height: 100%;
+  padding: 20px 30px;
 }
 
-.right{
-    width: 30%;
-    height: 100%;
+.right {
+  width: 30%;
+  height: 100%;
+  padding: 20px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
-    /* fine prima sezione */
-
-    /* seconda sezione */
-
-.main-container-2nd-row :first-child{
-    width: 60%;
-    height: 200px;
+.left > * {
+  padding-bottom: 20px;
 }
 
-.main-container-2nd-row :last-child{
-    width: 40%;
-    height: 200px;
+.left > h3 {
+  padding-bottom: 40px;
 }
 
-.main-container-2nd-row{
-    display: flex;
+ /* fine prima sezione */
+
+ /* seconda sezione */
+
+.img-box {
+  width: 60%;
 }
-    /* fine seconda sezione */
-
-    /* inizio terza sezione */
-
-.main-container-3rd-row{
-    display: flex;
-    flex-wrap: wrap;
+.text-box {
+  width: 40%;
+  margin-left: 30px;
+  padding-top: 30px;
 }
-
-
-.main-container-3rd-row div{
-    width:calc((100% / 3) - 10px);
-    height: 200px;
-}
-
-
-.square-section{
-    display: flex;
+.img-box > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
-.square-section .square{
-    width: calc(100% / 3);
-    height: calc(100vW / 3);
-    background-color: aquamarine;
-    border: 2px solid black;
-    display: flex;
-    flex-wrap: wrap;
+.main-container-2nd-row {
+  display: flex;
+  margin-top: 100px;
 }
 
-.l-square{
-    width: 50%;
-    height: 50%;
-    border: 2px solid black;
-    background-color: blueviolet;
+.text-box > *{
+    margin: 20px 0px;
+}
+
+#white{
+    background-color: white;
+    color: black;
+    border: 1px solid rgba(128, 128, 128, 0.5);
 }
 
 
-    /* inizio quinta sessione */
+ /* fine seconda sezione */
 
-.info-box{
-    width: 60%;
+ /* inizio terza sezione */
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-    /* fine quinta sezione */
+.container div {
+  width: calc((100% / 3) - 10px);
+  height: 200px;
+}
 
-    /* inizio sezione faq */
-    
+.margin-3rd{
+    margin: 0px 15px;
+}
+
+.square-section {
+  display: flex;
+}
+
+.square-section .square {
+  width: calc(100% / 3);
+  height: calc(100vw / 3);
+  background-color: aquamarine;
+  border: 2px solid black;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.l-square {
+  width: 50%;
+  height: 50%;
+  border: 2px solid black;
+  background-color: blueviolet;
+}
+
+ /* inizio quinta sessione */
+
+.info-box {
+  width: 60%;
+}
+
+
+ /* fine quinta sezione */
+
+ /* inizio sezione faq */
+
 footer {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
 
-footer > nav{
-    width: 70%;
-    display: flex;
-    margin: auto;
-    justify-content: center;
+footer > nav {
+  width: 70%;
+  display: flex;
+  margin: auto;
+  justify-content: center;
 }
 
- footer nav ul li{
-    display: inline-block;
- }
+footer nav ul li {
+  display: inline-block;
+}
 
-  footer nav ul{
-    display: flex;
-    justify-content: space-between;
-    width: 70%;
-  }
-
+footer nav ul {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+}
