--- a/css/style.css
+++ b/css/style.css
@@ -17,15 +17,11 @@ li {
   list-style: none;
 }
 
-/* debug */
 
-.main-container-3rd-row div {
-  border: 2px dashed black;
-  background-color: firebrick;
-}
 
 /* header */
-/* header-top */
+
+  /* header-top */
 
 .header-top {
   display: flex;
@@ -291,19 +287,46 @@ h1 {
 
  /* inizio terza sezione */
 
+ .main-container-3rd-row{
+    margin-top: 100px;
+ }
+
 .container {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
+  margin-top: 30px;
 }
 
-.container div {
+.container > .operation-card {
   width: calc((100% / 3) - 10px);
-  height: 200px;
+  min-height: 200px;
+  margin-bottom: 30px;
+}
+
+.container > .operation-card :first-child{
+  margin-bottom: 20px;
+}
+
+
+
+.operation-card > div > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.operation-card :nth-child(2){
+  margin: 20px 0px;
 }
 
 .margin-3rd{
     margin: 0px 15px;
 }
+ 
+/* fine terza sezione */
+
+
 
 .square-section {
   display: flex;
