--- a/css/style.css
+++ b/css/style.css
@@ -495,10 +495,12 @@ h3{
 
 .faq-row > ul > li{
   padding: 30px 0px ;
+  display: flex;
+  justify-content: space-between;
 }
 
 .faq-row > ul > li > i{
-  padding-left: 550px;
+  padding-right: 20px;
 }
 
 /* footer */
